# impresspress

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  justfile  package.json
.cargo/: audit.toml  config.toml.example
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci-main.yml  ci.yml  deploy-demo.yml  regen-visual-baselines.yml  release.yml
.playwright-mcp/: page-2026-07-21T10-34-15-465Z.yml  page-2026-07-21T10-34-24-319Z.yml  page-2026-07-21T10-34-29-130Z.yml  page-2026-07-21T10-34-50-406Z.yml  page-2026-07-21T10-35-03-507Z.yml  page-2026-07-21T10-35-14-655Z.yml  page-2026-07-21T10-35-24-493Z.yml  page-2026-07-21T10-35-31-120Z.yml  page-2026-07-21T10-35-36-951Z.yml  page-2026-07-21T10-36-48-538Z.yml  page-2026-07-21T10-37-33-705Z.yml  page-2026-07-21T10-37-53-087Z.yml  page-2026-07-21T10-38-37-945Z.yml  page-2026-07-21T10-38-43-677Z.yml  page-2026-07-21T10-38-46-679Z.yml  page-2026-07-21T10-38-56-194Z.yml  page-2026-07-21T10-39-04-578Z.yml  page-2026-07-21T10-39-07-676Z.yml  page-2026-07-21T10-39-15-424Z.yml  page-2026-07-21T10-39-49-619Z.yml  page-2026-07-21T10-40-00-839Z.yml  page-2026-07-21T10-40-40-885Z.yml  page-2026-07-21T10-40-57-908Z.yml  page-2026-07-21T10-41-18-075Z.yml  page-2026-07-21T10-41-35-769Z.yml  page-2026-07-21T10-41-51-546Z.yml  page-2026-07-21T10-42-16-359Z.yml  page-2026-07-21T10-42-21-779Z.yml  page-2026-07-21T10-42-37-324Z.yml  page-2026-07-21T10-42-43-613Z.yml  page-2026-07-21T10-42-50-884Z.yml  page-2026-07-21T10-54-16-059Z.yml  page-2026-07-21T19-56-09-226Z.yml  page-2026-07-21T19-56-22-268Z.yml  page-2026-07-21T19-57-21-491Z.yml  page-2026-07-21T19-57-39-003Z.yml  page-2026-07-21T19-57-47-947Z.yml  page-2026-07-21T19-58-02-172Z.yml  page-2026-07-21T19-58-18-397Z.yml  page-2026-07-21T20-00-17-352Z.yml  (+46 more)
crates/impresspress/: Cargo.toml  build.rs
crates/impresspress-browser/: Cargo.toml
crates/impresspress-browser/js/: bridge.js
crates/impresspress-browser/src/: asset_loader.rs  bridge.rs  convert.rs  crypto.rs  database.rs  db_codec.rs  lib.rs  runtime.rs  storage.rs  storage_cursor.rs
crates/impresspress-bundle/: Cargo.toml
crates/impresspress-bundle/assets/: loader.js.tmpl  sw.js.tmpl
crates/impresspress-bundle/src/: lib.rs
crates/impresspress-bundle/tests/: bundle_integration.rs
crates/impresspress-cloudflare/: Cargo.toml
crates/impresspress-cloudflare/src/: config_source.rs  conformance.rs  convert.rs  crypto_service.rs  database.rs  kv_cached_db.rs  lib.rs  logger_service.rs  network_service.rs  runner.rs  runtime_cache.rs  storage.rs
crates/impresspress-core/: Cargo.toml  wafer.json
crates/impresspress-core/src/: admin_schema.rs  boot.rs  builder.rs  cache.rs  cache_key.rs  config_source.rs  config_vars.rs  crypto.rs  csrf.rs  deploy_init.rs  endpoint_match.rs  features.rs  http.rs  kv.rs  lib.rs  log_level.rs  messages_schema.rs  metrics.rs  migration_helper.rs  multipart.rs  pipeline.rs  routing.rs  ssrf.rs  streaming.rs  test_support.rs  util.rs
crates/impresspress-core/tests/: autoreg_smoke.rs  env_config_source.rs  extra_routes_test.rs  lockfile_e2e.rs
crates/impresspress-native/: Cargo.toml
crates/impresspress-native/src/: database.rs  env.rs  lib.rs  log_init.rs  network.rs  serve.rs  storage.rs
crates/impresspress-native/tests/: factory_smoke.rs
crates/impresspress-web/: Cargo.toml  impresspress.toml  package-lock.json  package.json
crates/impresspress-web/js/: manifest.json
crates/impresspress-web/src/: config.rs  lib.rs
crates/impresspress-web/tests/: playwright.visual-baseline.config.ts
crates/impresspress-web/tests/e2e/: products-catalog-admin.spec.ts  products-lifecycle.spec.ts  products-manager.spec.ts  products-seller-governance.spec.ts  products-storefront.spec.ts  products-webhook-admin.spec.ts  products-wizard.spec.ts  smoke.spec.ts  sw-update.spec.ts  vector.spec.ts  visual-baseline.spec.ts
crates/impresspress-web/tests/e2e/fixtures/: global-setup.ts
crates/impresspress/src/: lib.rs  main.rs
crates/impresspress/src/cli/: cli_args.rs  cmd.rs  config.rs  mod.rs  server.rs  server_config.rs
crates/impresspress/src/cli/flows/: embed_cloudflare.rs  embed_native.rs  embed_web.rs  sealed_native.rs  sealed_web.rs
crates/impresspress/src/cli/helpers/: blocks.rs  overlays.rs  wasm.rs
crates/impresspress/src/cli/helpers/cloudflare/: assets.rs  build.rs  deploy.rs  env.rs  profile_check.rs  wrangler.rs
crates/impresspress/tests/: cli_args.rs  deploy_init.rs  dry_run_goldens.rs  flow_sealed_native.rs  flow_sealed_web.rs  helpers_blocks.rs  helpers_cloudflare_assets.rs  helpers_cloudflare_env.rs  helpers_cloudflare_wrangler.rs  helpers_frontend.rs  helpers_wasm.rs  mode_detect.rs  wasm_bundling.rs
docs/: 2026-07-18-externalize-static-assets-benchmark.md  2026-07-18-findings-completion-program-summary.md  2026-07-19-products-stripe-implementation-plan.md  CODE_REVIEW_2026-06-05.md  CODE_REVIEW_2026-06-05_HANDOFF.md  CODE_REVIEW_2026-06-05_findings.json  CODE_REVIEW_2026-07-16_FINDINGS.md  d1_statement_batching_producer_design.md  documentation_review_report.md  products-stripe-commerce.md  wasm_optimization_suggestions.md
examples/: package-lock.json  package.json  playwright.config.ts  products.playwright.config.ts  run-tests.sh
examples/minimal-browser/: Cargo.toml  README.md
examples/minimal-browser/src/: lib.rs
examples/products/: README.md  matrix.html
examples/products/boutique-store/: README.md  commerce.fixture.json  index.html
examples/products/course-configurator/: README.md  commerce.fixture.json  index.html
examples/products/digital-download/: README.md  commerce.fixture.json  index.html
examples/products/donation-campaign/: README.md  commerce.fixture.json  index.html
examples/products/event-tickets/: README.md  commerce.fixture.json  index.html
examples/products/marketplace/: README.md  commerce.fixture.json  index.html
examples/tests/: blog-web.spec.ts  products-examples.spec.ts
scripts/: audit-wrap-grants.sh  build-sql-js-fts5.sh  check-audit-expiry.sh  grep-guard-html.sh  sync-fonts.sh
(+324 files in other folders)
