[workspace]
resolver = "2"
members = [
    "crates/impresspress-browser",
    "crates/impresspress-bundle",
    "crates/impresspress-cloudflare",
    "crates/impresspress-core",
    "crates/impresspress-native",
    "crates/impresspress",
    "crates/impresspress-web",
    "examples/minimal-browser",
]
# impresspress-cloudflare is wasm32-only (depends on `worker`/`wasm-bindgen`,
# whose StorageService futures wrap `!Send` JsFuture). Excluded from
# default-members so host `cargo test`/`cargo check` skip it; build it
# explicitly with `cargo <cmd> -p impresspress-cloudflare --target wasm32-unknown-unknown`.
default-members = [
    "crates/impresspress-browser",
    "crates/impresspress-bundle",
    "crates/impresspress-core",
    "crates/impresspress-native",
    "crates/impresspress",
    "crates/impresspress-web",
    "examples/minimal-browser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# WAFER runtime (git deps pinned to rev)
wafer-run = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac", default-features = false }
wafer-block = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-core = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-sql-utils = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-cors = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-crypto = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-http-listener = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-inspector = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-local-storage = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-network = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-readonly-guard = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-router = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-s3 = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-security-headers = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-sqlite = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-web = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-postgres = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }
wafer-block-fastembed = { git = "https://github.com/wafer-run/wafer-run", rev = "10eb4e3d0744d409b8cd6ffc0abf5daf219f44ac" }

# Core
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock", "wasmbind"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
tracing-opentelemetry = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "v7"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
getrandom = { version = "0.2" }
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }

# Cloudflare Workers SDK (wasm-only crates; only used by impresspress-cloudflare)
worker = { version = "0.7.5", features = ["d1"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
maud = "0.26"
[profile.release]
# Size-first wasm profile (CF Worker + browser both ship from `release`).
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
# Two further wasm optimizations were benchmark-gated here and REJECTED by
# measurement (raw `cargo build --target wasm32-unknown-unknown --release`
# .wasm bytes; see the perf/wasm-opt-simd PR for full numbers):
#
#   * Per-package `[profile.release.package.<crypto>] opt-level = 3` (sha2,
#     hmac, pbkdf2, argon2, blake2, hkdf) to speed the login/JWT hot path.
#     Result: BYTE-FOR-BYTE IDENTICAL wasm (same sha256) for both targets.
#     `lto = true` (fat LTO) re-optimizes the merged module at the top-level
#     `-Oz`, discarding each crate's pre-LTO opt-level — the override is a
#     no-op here. Making O3 crypto codegen actually survive would require a
#     global LTO-mode change (e.g. `lto = "thin"`), a whole-bundle tradeoff
#     that needs its own size+perf benchmark, not a "one crate" tweak.
#
#   * `-C target-feature=+simd128` for the wasm32 builds. Result: negligible
#     (browser -122 B, CF -154 B, ~0.02%). The CF Worker has no SIMD-eligible
#     code (crypto uses portable soft backends; `-Oz` disables autovectoriz-
#     ation), so it gains nothing. Only the browser's `vector/score.rs` f32x4
#     dot-product benefits, and only during vector search — a niche win that
#     doesn't justify raising the browser floor to Safari 16.4 or threading
#     RUSTFLAGS through every CI/deploy job (`.cargo/config.toml` is already
#     owned by the gitignored local wafer-run `[patch]` workflow).

[workspace.lints.clippy]
redundant_clone = "warn"
large_enum_variant = "warn"
needless_collect = "warn"
uninlined_format_args = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"

[workspace.lints.rust]
unused_must_use = "warn"
