[package]
name = "impresspress-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Impresspress compiled to WASM for running in the browser via Service Worker"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Browser framework (platform services + SW plumbing)
impresspress-browser = { path = "../impresspress-browser" }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Request", "Response", "ResponseInit",
    "Headers", "ReadableStream",
    "Url",
    "console",
] }
js-sys = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WAFER runtime (no tokio, no wasmi, no reqwest)
wafer-run = { workspace = true }
wafer-core = { workspace = true }
wafer-block = { workspace = true }

# Impresspress shared core (builder + flows + router + feature blocks).
# Absorbed today's impresspress (lib) crate. `default-features = false`
# strips the native block set; the explicit `features` list pulls back
# in the wasm32-clean feature blocks so `register_all_static_blocks`
# actually registers them. Without this list every `impresspress/<name>`
# route returns "block not found" — linkme `register_static_block!`
# doesn't emit on wasm32, so the manual register helper is the only
# registration site, and every entry in it is
# `#[cfg(feature = "block-X")]`-gated. Keep in sync with
# `impresspress-cloudflare/Cargo.toml`.
#
# (`block-llm`/`block-vector` were once excluded here because the old
# LlmBlock pulled tokio/reqwest on wasm32; the LlmService trait refactor
# made both wasm32-clean and they're now part of the demo's block set.)
impresspress-core = { path = "../impresspress-core", default-features = false, features = [
    "block-files",
    "block-legalpages",
    # `block-llm` (NOT `llm`): registers the `impresspress/llm` feature block —
    # chat UI + thread persistence — on wasm32. It holds a `NoopProviderAdmin`
    # (no native HTTP `ProviderLlmService`); chat routes through the
    # browser-supplied `BrowserLlmService` on the shared `wafer-run/llm` router.
    "block-llm",
    "block-messages",
    "block-products",
    "block-userportal",
    # `block-vector`: the vector-indexes admin UI (`impresspress/vector`). The
    # browser provides real vector + embedding services (BrowserVectorService +
    # transformers-embed), so the page is fully functional in the demo. The old
    # exclusion predates the LlmService refactor that made this wasm32-clean.
    "block-vector",
] }

# Config service (needed for EnvConfigService::new() and ConfigService::set())

# Async traits
async-trait = "0.1"

# Futures utilities (BoxStream + stream helpers for the LlmService impl)
futures = "0.3"

# CancellationToken — used by the LlmService trait signatures
tokio-util = { version = "0.7", default-features = false }

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--all-features"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# uuid v4 needs a JS RNG source on wasm32
uuid = { version = "1", features = ["v4", "js"] }
